# wgpu_nnd

./: .gitignore  Cargo.toml  Makefile  Session.vim
src/: lib.rs  main.rs  shader.wgsl
