[package]
name = "wgpu_nnd"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }
pollster = "0.4.0"
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
flume = "0.11.1"
ndarray-npy = { version = "0.9.1", default-features = false }
ndarray = { version = "0.16.1", default-features = false }
